test/cli/test-validating-policy/check-deployment-namespace/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: check-deployment-namespace
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
    - apiGroups:   [apps]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [deployments]
  validations:
    - expression: >-
        namespaceObject.metadata.name == "production"
      message: >-
        Deployment namespace must be "production"
