test/cli/test-validating-policy/check-deployment-namespace/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
  namespace: production
  labels:
    app: nginx
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
