test/cli/test-validating-policy/check-deployment-namespace/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
- labels:
    environment: production
  name: production
